Fixed the header z-index issue and the footer icons not appearing issue. Background on pages has been changed to white.

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,7 +1,3 @@
-body{
-    background-color: rgb(233, 227, 221);
-}
-
 .centered-image{
  display:block;
  margin:auto;
