--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,10 +1,6 @@
 body {
-    background-color: rgb(233, 227, 221);
+    background-color: rgb(255, 255, 255);
     margin: 0;
-}
-
-.footer-icon {
-    font-size: 50px !important;
 }
 
 .footer-icon-img {
@@ -35,9 +31,10 @@ body {
 #navbarPlaceholder {
     position: sticky;
     top: 0;
-    z-index: 2;
+    z-index: 3000;
 }
 
 #footerPlaceholder {
     margin-top: 20vw;
+    z-index: 3000;
 }
